# appmana-comfyui-nodes-video-frame-interpolation

./: other_nodes.py  pyproject.toml  requirements-with-cupy.txt  test.py  vfi_utils.py
config/: add_configuration.py
nodes/: __init__.py
vfi_models/amt/: __init__.py
vfi_models/cain/: __init__.py
vfi_models/eisai/: __init__.py  eisai_arch.py
vfi_models/film/: __init__.py
vfi_models/flavr/: __init__.py  resnet_3D.py
vfi_models/gmfss_fortuna/: GMFSS_Fortuna_arch.py  GMFSS_Fortuna_union_arch.py  __init__.py
vfi_models/ifrnet/: __init__.py
vfi_models/ifunet/: __init__.py
vfi_models/m2m/: M2M_arch.py  __init__.py
vfi_models/ops/: __init__.py
vfi_models/rife/: __init__.py  rife_arch.py
vfi_models/sepconv/: __init__.py  sepconv_enhanced.py
vfi_models/stmfnet/: __init__.py  stmfnet_arch.py
vfi_models/xvfi/: __init__.py
