[project]
name = "comfyui-frame-interpolation"
description = "A custom node suite for Video Frame Interpolation in ComfyUI"
version = "1.0.6"
license = { file = "LICENSE" }
dependencies = [
    "comfyui",
    "numpy",
    "einops",
    "opencv-contrib-python-headless",
    "kornia",
    "scipy",
    "Pillow",
    "tqdm",
    "taichi",
    "cupy-cuda12x; platform_system != 'Darwin'",
]

[project.urls]
Repository = "https://github.com/Fannovel16/ComfyUI-Frame-Interpolation"

[tool.comfy]
PublisherId = "fannovel16"
DisplayName = "ComfyUI-Frame-Interpolation"
Icon = ""

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["comfyui_frame_interpolation"]
package-dir = { "comfyui_frame_interpolation" = "." }

[tool.setuptools.dynamic]
dependencies = { file = ["requirements-with-cupy.txt"] }

[project.entry-points."comfyui.custom_nodes"]
comfyui_frame_interpolation = "comfyui_frame_interpolation.nodes"

[project.entry-points."comfyui.custom_config"]
comfyui_frame_interpolation = "comfyui_frame_interpolation.config.add_configuration:add_configuration"